v74 - scrollbar styling - needs fixing

--- a/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ShareDropDownStyles.scss
+++ b/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ShareDropDownStyles.scss
@@ -25,8 +25,15 @@
     padding: 0.6em 1em;
 
     overflow-y: scroll;
+
+    //Fix scrollbars for all browsers
+
     ::-webkit-scrollbar {
-        width: 8px;
+        width: 8px; 
+    }
+
+    ::-webkit-scrollbar-track {
+        background: rgba($color: #000000, $alpha: 1.0);
     }
 
     .share-button-drop-down-middle-text {
